--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
     interval: daily
     time: "13:00"
   open-pull-requests-limit: 15
-  badgroups:
+  groups:
     all-updates:
       applies-to: version-updates
     all-security:
