--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,6 +8,8 @@ updates:
   open-pull-requests-limit: 15
   groups:
     all-updates:
+      dependency-type: all
       applies-to: version-updates
     all-security:
+      dependency-type: all
       applies-to: security-updates
