--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -8,8 +8,8 @@ updates:
   open-pull-requests-limit: 15
   groups:
     all-updates:
-      dependency-type: all
+      dependency-type: production
       applies-to: version-updates
     all-security:
-      dependency-type: all
+      dependency-type: production
       applies-to: security-updates
